--- a/packages/calamares-config-lxde/PKGBUILD
+++ b/packages/calamares-config-lxde/PKGBUILD
@@ -2,21 +2,19 @@
 
 pkgname=calamares-config-lxde
 pkgver=1.0
-pkgrel=5
+pkgrel=6
 pkgdesc="Calamares configuration for Archcraft LXDE."
-url="https://github.com/archcraft-os/archcraft-lxde"
 arch=('any')
+url="https://github.com/archcraft-os/archcraft-lxde"
 license=('GPL')
-provides=($pkgname)
 conflicts=('calamares-config' 'calamares-config-xfce' 'calamares-config-prime' 'calamares-config-wayland')
-depends=()
 
 prepare() {
-	cp -af ../files/. ${srcdir}
+	cp -af ../files/. "$srcdir"
 }
 
 package() {
-	local _bindir=${pkgdir}/usr/bin
+	local _bindir="$pkgdir"/usr/bin
 	mkdir -p "$_bindir"
 
 	# copy all files recursively in /etc/calamares
