--- a/profile/airootfs/etc/skel/.config/picom.conf
+++ b/profile/airootfs/etc/skel/.config/picom.conf
@@ -1,5 +1,25 @@
-## Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
+## Copyright (C) 2020-2024 Aditya Shakya <adi1090x@gmail.com>
 ## Everyone is permitted to copy and distribute copies of this file under GNU-GPL3
+##
+## Original Picom's Config File
+
+#################################
+#           Corners             #
+#################################
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 0;
+
+rounded-corners-exclude = [
+#	"window_type = 'normal'",
+	"window_type = 'dock'",
+	"window_type = 'desktop'",
+	"class_g ?= 'rofi'",
+	"class_g ?= 'polybar'",
+	"class_g ?= 'tint2'"
+];
 
 
 #################################
@@ -11,7 +31,6 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
@@ -96,7 +115,6 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
@@ -181,25 +199,6 @@ opacity-rule = [
 
 
 #################################
-#           Corners             #
-#################################
-
-# Sets the radius of rounded window corners. When > 0, the compositor will
-# round the corners of windows. Does not interact well with
-# `transparent-clipping`.
-corner-radius = 0
-
-# Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-#	"window_type = 'normal'",
-	"window_type = 'dock'",
-	"window_type = 'desktop'",
-	"class_g ?= 'rofi'",
-	"class_g ?= 'polybar'",
-	"class_g ?= 'tint2'"
-];
-
-#################################
 #     Background-Blurring       #
 #################################
 
@@ -210,7 +209,7 @@ rounded-corners-exclude = [
 #
 # blur-deviation = false
 #
-# blur-strength = 5
+# blur-strength = 0;
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -241,9 +240,11 @@ blur-kern = "3x3box";
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+#	"window_type = 'dock'",
+	"window_type = 'desktop'",
+	"class_g = 'Plank'",
+	"class_g = 'slop'",
+	"_GTK_FRAME_EXTENTS@:c"
 ];
 
 #################################
@@ -256,7 +257,6 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
 backend = "xrender";
 
 # Enable/disable VSync.
@@ -456,6 +456,6 @@ wintypes:
   popup_menu = { opacity=1.0; }
   dropdown_menu = { opacity=1.0; }
   utility = { shadow=false; opacity=1.0; }
-  dock = { shadow = true; clip-shadow-above = true; }
-  dnd = { shadow = true; }
+  dock = { shadow=true; clip-shadow-above=true; }
+  dnd = { shadow=true; }
 };
